--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap - Prebuilt Layout</title>
+    <title>AP World History: Modern - Home Page</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.3.1.css" rel="stylesheet">
@@ -19,18 +19,20 @@
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">CB Requirements</a>
              </li>
              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Units or Periods
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                   <a class="dropdown-item" href="#">Action</a>
-                   <a class="dropdown-item" href="#">Another action</a>
+                   <a class="dropdown-item" href="#">Period 1 (1200-1450)</a>
+                   <a class="dropdown-item" href="#">Period 2 (1450 - 1750)</a>
+                   <a class="dropdown-item" href="#">Period 2 (1750-1900)</a>
+                   <a class="dropdown-item" href="#">Period 2 (1900-Present)</a>
                    <div class="dropdown-divider"></div>
                    <a class="dropdown-item" href="#">Something else here</a>
                 </div>
@@ -47,12 +49,12 @@
     </nav>
 
     <div class="jumbotron jumbotron-fluid text-center">
-       <h1 class="display-4">Bootstrap with Dreamweaver</h1>
-       <p class="lead">Easily build your page using the Bootstrap components from the Insert panel.</p>
+       <h1 class="display-4">AP World History: Modern</h1>
+       <p class="lead">This is basically a website that is supposed to be a review for the AP Exam in May.</p>
        <hr class="my-4">
-       <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+       <p>If you want to know exactly what College Board is going to test you on, or the overview of the test, click the button below.</p>
        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Click Here</a>
        </p>
     </div>
     <div class="container">
